--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,6 @@ keyfile
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 *.tfvars
-backend.tf
+*backend.tf
 .terraform
+*.bak
